{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 65,
  "lineage": "6497b06f-cf7c-c6e7-e2ab-442ce69d81f4",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/networkInterfaces/dev-vm-nic-0",
            "internal_domain_name_suffix": "f3xtykhssrqednziy0v3vgrbyd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "dev-vm-nic-0",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "dev-rg"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.main",
            "module.networking.azurerm_subnet.private",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/networkInterfaces/dev-vm-nic-0|/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/networkSecurityGroups/dev-vm-nsg",
            "network_interface_id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/networkInterfaces/dev-vm-nic-0",
            "network_security_group_id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/networkSecurityGroups/dev-vm-nsg"
          },
          "dependencies": [
            "module.compute.azurerm_network_interface.vm_nic",
            "module.compute.azurerm_network_security_group.vm_nsg",
            "module.networking.azurerm_resource_group.main",
            "module.networking.azurerm_subnet.private",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/networkSecurityGroups/dev-vm-nsg",
            "location": "eastus",
            "name": "dev-vm-nsg",
            "resource_group_name": "dev-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTP",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgateway/backendAddressPools/web-backend-pool",
                "ip_addresses": [
                  "10.0.1.4"
                ],
                "name": "web-backend-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgateway/backendHttpSettingsCollection/web-backend-http-settings",
                "name": "web-backend-http-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 30,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgateway/frontendIPConfigurations/frontend-ip-config",
                "name": "frontend-ip-config",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/publicIPAddresses/dev-appgateway-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgateway/frontendPorts/http-frontend-port",
                "name": "http-frontend-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgateway/gatewayIPConfigurations/gateway-ip-config",
                "name": "gateway-ip-config",
                "subnet_id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-gateway"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgateway/frontendIPConfigurations/frontend-ip-config",
                "frontend_ip_configuration_name": "frontend-ip-config",
                "frontend_port_id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgateway/frontendPorts/http-frontend-port",
                "frontend_port_name": "http-frontend-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgateway/httpListeners/web-http-listener",
                "name": "web-http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgateway",
            "identity": [],
            "location": "eastus",
            "name": "dev-appgateway",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgateway/backendAddressPools/web-backend-pool",
                "backend_address_pool_name": "web-backend-pool",
                "backend_http_settings_id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgateway/backendHttpSettingsCollection/web-backend-http-settings",
                "backend_http_settings_name": "web-backend-http-settings",
                "http_listener_id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgateway/httpListeners/web-http-listener",
                "http_listener_name": "web-http-listener",
                "id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/applicationGateways/dev-appgateway/requestRoutingRules/web-routing-rule",
                "name": "web-routing-rule",
                "priority": 100,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "dev-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 1,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": null,
                "disabled_protocols": null,
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20220101",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": null,
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.compute.azurerm_linux_virtual_machine.main_vm",
            "module.compute.azurerm_network_interface.vm_nic",
            "module.compute.azurerm_network_interface_security_group_association.nic_nsg_assoc",
            "module.compute.azurerm_network_security_group.vm_nsg",
            "module.loadbalancer.azurerm_public_ip.app_gateway_pip",
            "module.networking.azurerm_resource_group.main",
            "module.networking.azurerm_subnet.gateway",
            "module.networking.azurerm_subnet.private",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "app_gateway_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/publicIPAddresses/dev-appgateway-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.147.204.15",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "dev-appgateway-pip",
            "resource_group_name": "dev-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.compute.azurerm_linux_virtual_machine.main_vm",
            "module.compute.azurerm_network_interface.vm_nic",
            "module.compute.azurerm_network_interface_security_group_association.nic_nsg_assoc",
            "module.compute.azurerm_network_security_group.vm_nsg",
            "module.networking.azurerm_resource_group.main",
            "module.networking.azurerm_subnet.private",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-gateway",
            "name": "dev-gateway",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.main",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/dev-private",
            "name": "dev-private",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "dev-rg",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.main",
            "module.networking.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "283c6f2f-94f2-4160-b728-c6abda9a21c3",
            "id": "/subscriptions/00f55019-eb44-489a-8e35-5749a780d82f/resourceGroups/dev-rg/providers/Microsoft.Network/virtualNetworks/dev-vnet",
            "location": "eastus",
            "name": "dev-vnet",
            "resource_group_name": "dev-rg"
          },
          "dependencies": [
            "module.networking.azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}